--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-paginate": "^8.2.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "react-use-draggable-scroll": "^0.4.7",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
